Bug 42004 - [quota] quota is still IPv4 only, and not INET independant
Summary: [quota] quota is still IPv4 only, and not INET independant
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 5.0-CURRENT
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-08-25 18:20 UTC by Jean-Luc.Richier
Modified: 2012-05-07 04:52 UTC (History)
1 user (show)

See Also:


Attachments
file.diff (2.82 KB, patch)
2002-08-25 18:20 UTC, Jean-Luc.Richier
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Luc.Richier 2002-08-25 18:20:02 UTC
	Almost all NFS/kernel code has been ported to TIRPC in July and is
	therefore INET4/INET6 indenpendant. There is one command (quota) which
	has been forgotten, and a modification done in rpc.statd is not INET*
	independant.

Fix: Applies the following patch - and do not use inet_ntoa/gethostby*
	functions, sockaddr_in structures and svc_getcaller call anymore.

	

How-To-Repeat: 	Code inspection
Comment 1 Matteo Riondato freebsd_committer freebsd_triage 2007-03-28 11:04:49 UTC
Responsible Changed
From-To: freebsd-bugs->matteo

I'll do some work on rpc.statd and I can work on this issue too.
Comment 2 dfilter service freebsd_committer freebsd_triage 2007-04-02 19:59:55 UTC
matteo      2007-04-02 18:59:48 UTC

  FreeBSD src repository

  Modified files:
    usr.sbin/rpc.statd   procs.c 
  Log:
  Make rpc.statd INET* indipendent by converting sockaddr_in structures
  to sockaddr ones and using svc_getrpccaller instead of svc_getcaller.
  A similar patch was committed to rpc.lockd back in 2002 .
  
  PR:             bin/42004
  MFC after:      1 week
  
  Revision  Changes    Path
  1.17      +18 -6     src/usr.sbin/rpc.statd/procs.c
_______________________________________________
cvs-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/cvs-all
To unsubscribe, send any mail to "cvs-all-unsubscribe@freebsd.org"
Comment 3 dfilter service freebsd_committer freebsd_triage 2007-04-12 08:47:53 UTC
matteo      2007-04-12 07:47:45 UTC

  FreeBSD src repository

  Modified files:        (Branch: RELENG_6)
    usr.sbin/rpc.statd   procs.c 
  Log:
  MFC rev. 1.16 and rev. 1.17
          1.16: compile under WARNS=6
  
          1.17: Make rpc.statd INET* indipendent by converting
          sockaddr_in structures to sockaddr ones and using
          svc_getrpccaller instead of svc_getcaller.
          A similar patch was committed to rpc.lockd back in 2002 . [1]
  
  PR:     bin/42004 [1]
  
  Revision   Changes    Path
  1.14.10.2  +21 -10    src/usr.sbin/rpc.statd/procs.c
_______________________________________________
cvs-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/cvs-all
To unsubscribe, send any mail to "cvs-all-unsubscribe@freebsd.org"
Comment 4 Matteo Riondato freebsd_committer freebsd_triage 2007-08-23 06:40:16 UTC
Responsible Changed
From-To: matteo->freebsd-bugs

Put this back to the pool: I took care of the rpc.statd part of this PR but don't know enough about quota code to commit the patch (truckman@ said it applies cleanly and compilesi without errors)
Comment 5 mpp freebsd_committer freebsd_triage 2007-08-23 07:31:49 UTC
Responsible Changed
From-To: freebsd-bugs->mpp

I'll look at the quota part of this.
Comment 6 Mark Linimon freebsd_committer freebsd_triage 2008-02-29 00:41:30 UTC
State Changed
From-To: open->suspended

The rpc.statd part of this has been committed, so remove it from the 
Synopsis. 

Since this doesn't appear to be actively being worked on, I'm going to 
set it to 'suspended' so I don't trip over it again. 

Hat:		bugmeister
Comment 7 Mark Linimon freebsd_committer freebsd_triage 2011-02-14 20:52:47 UTC
Responsible Changed
From-To: mpp->freebsd-bugs

mpp@'s address is now bouncing.  In any case he has been inactive for 
several years.
Comment 8 Eitan Adler freebsd_committer freebsd_triage 2012-05-07 04:52:06 UTC
State Changed
From-To: suspended->closed

I don't believe this is true anymore. if it is, plese email me